language/move-lang/tests/move_check/parser/expr_abort_missing_value.move
module M {
    fun f(v: u64) {
        // Aborts always require a value
        if (v > 100) abort
    }
}
